--- a/tests/examples/one-page/index.html
+++ b/tests/examples/one-page/index.html
@@ -1,9 +1,13 @@
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  </head>
-  <body>
-    test
-  </body>
+
+<head>
+  <meta charset="utf-8">
+</head>
+
+<body>
+  <script>
+    document.body.appendChild(document.createTextNode("test"));
+  </script>
+</body>
+
 </html>
