--- a/tests/examples/other/fix-insert-rule.html
+++ b/tests/examples/other/fix-insert-rule.html
@@ -11,10 +11,10 @@
       const css = "p { color: red; }",
         head = document.head || document.getElementsByTagName("head")[0],
         style = document.createElement("style");
-      const sheet = style.sheet;
-      sheet.insertRule(css, sheet.cssRules.length)
       style.id = "css-in-js";
       head.appendChild(style);
+      const sheet = style.sheet;
+      sheet.insertRule(css, sheet.cssRules.length);
     }
   </script>
 </body>
