--- a/tests/examples/other/fix-insert-rule.html
+++ b/tests/examples/other/fix-insert-rule.html
@@ -6,7 +6,7 @@
 
 <body>
   <p>test</p>
-  <script type="text/javascript">
+  <script>
     if (!document.getElementById("css-in-js")) {
       const css = "p { color: red; }",
         head = document.head || document.getElementsByTagName("head")[0],
