--- a/tests/examples/other/remove-blobs.html
+++ b/tests/examples/other/remove-blobs.html
@@ -6,7 +6,7 @@
 
 <body>
   <p>test</p>
-  <script type="text/javascript">
+  <script>
     const blob = new Blob(["p { color: red; }"], { type: "text/css" });
     const link = document.createElement("link");
     link.rel = "stylesheet";
