Added null check for link port

--- a/tests/examples/other/localhost-links-different-port.html
+++ b/tests/examples/other/localhost-links-different-port.html
@@ -6,6 +6,7 @@
 
 <body>
   <a href="http://localhost:55555">localhost link on a different port</a>
+  <a href="http://localhost">localhost link with no port</a>
 </body>
 
 </html>
