--- a/tests/examples/other/history-push.html
+++ b/tests/examples/other/history-push.html
@@ -1,10 +1,1 @@
-<html lang="en">
-  <head>
-    <meta charset="utf8" />
-  </head>
-  <body>
-    <script type="text/javascript">
-      history.pushState(null, null, "hello");
-    </script>
-  </body>
-</html>
+<html lang="en"><head><meta charset="utf8"></head><body><script type="text/javascript">history.pushState(null, null, "hello");</script></body></html>
